--- a/blog-preview-card-main/style.css
+++ b/blog-preview-card-main/style.css
@@ -2,15 +2,66 @@ body {
     background-color: hsl(47, 88%, 63%);
     padding: 0;
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #box {
-    
+    width: 30%;
+    height: auto;
+    transform: scale(0.8);
     background-color: hsl(0, 0%, 100%);
-    width: px;
-    height: 40%;
+    border: 2px solid hsl(0, 0%, 7%);
+    border-radius: 15px;
+    box-shadow: 5px 5px hsl(0, 0%, 7%);
+    
 }
 
-p {
-    font-size: 16px;
+#tela {
+    margin: 0;
+    margin-top: 20px;
+    margin-left: 20px;
+    border-radius: 10px;
 }
+
+#title {
+    font-family: "Figtree-ExtraBold", sans-serif;    
+    background-color: hsl(47, 88%, 63%);
+    border: none;
+    border-radius: 5px;
+    padding: 4px;
+    width: 20%;
+    margin: 20px;
+    align-content: center;
+}
+
+#date {
+    font-family: "Figtree-ExtraBold", sans-serif;
+    margin: 20px;
+}
+
+h2 {
+    font-family: "Figtree-ExtraBold", sans-serif;
+    margin: 20px;
+}
+
+#text{
+    font-family: "Figtree-ExtraBold", sans-serif;
+    font-size: 19px;
+    color: hsl(0, 0%, 42%);
+    margin: 20px;
+}
+
+#boxInBox {
+    display: flex;
+    align-items: center;
+    padding-bottom: 5px;
+}
+
+#cara {
+    transform: scale(0.5);
+    margin: 0;
+    padding: 0;
+}
+
